demo/src/assets/css/main.css
@import "./tailwind.css";

/* components */
@import "./components/button";
@import "./components/dropdown-tailwind-version";

/* layout */
@import "./layout/sidebar";

@layer base {
    *,
    ::before,
    ::after {
        @apply border-slate-300/70 dark:border-slate-700;
    }
}

body {
    @apply bg-indigo-50/20 text-slate-700;
    @apply dark:bg-slate-900 dark:text-slate-300;
}

h2 {
    @apply flex items-center gap-2 text-2xl font-bold tracking-tight;
}

h3 {
    @apply text-lg font-semibold;

    svg {
        @apply mt-0.5;
    }

    & ~ p {
        @apply text-sm;
    }
}

.card {
    @apply rounded-lg border bg-white dark:bg-slate-950 p-6 shadow dark:shadow-slate-600/50;

    .badge-version {
        @apply inline-flex items-center rounded-full bg-indigo-100 text-indigo-700 px-2.5 py-0.5 text-[11px] font-semibold tracking-wider mt-0.5;
    }
}

code.badge {
    @apply px-1.5 py-0.5 rounded-md bg-slate-200 dark:bg-slate-700 text-slate-700 dark:text-slate-200 font-mono text-xs mx-1;
}

.tip-info {
    @apply text-sm text-slate-500 flex items-center flex-wrap gap-1;

    svg {
        @apply text-amber-500;
    }

    code.badge {
        @apply text-[11px];
    }
}

.doc-preview {
    @apply min-h-60 max-h-[500px] overflow-auto;

    .container {
        @apply text-center;
    }

    .row:not(:last-child) {
        @apply mb-6;
    }

    .col,
    [class*="col-"] {
        @apply bg-slate-50 dark:bg-slate-800 border p-6;
    }
}

